@@ -3,7 +3,7 @@ Asynchronous Upload tool for Amazon's Simple Storage Service (S3)
 ================================================================================
 
 Author: Adam Borocz (http://github.com/motns)
-Version: 1.2.6.2
+Version: 1.2.6.3
 License: GPL version 3
 
 ================================================================================
